header update with log

--- a/templates/header.html
+++ b/templates/header.html
@@ -12,7 +12,7 @@
 {% if not new_user %}
 <div class="header clear-fix">
   <div class="centered-content">
-    <a class="logo" href="/"><span class="eb_logo">EB</span> Weekly Snippets</a>
+    <a class="logo" href="/"><img src="/static/logo.png" height="32" width="32"> Weekly Snippets</a>
     <div class="navigation">
       <a class="navigation-link" href="/settings?u={{username}}">Settings</a> |
       {% if is_admin %} <a class="navigation-link" href="/admin/settings">Admin Settings</a> | {% endif %}
