--- a/static/snippets.css
+++ b/static/snippets.css
@@ -1,8 +1,15 @@
 /* CUSTOM */
 
-.eb_logo {
-    font-weight: bold;
-    color: #0588C8;
+.logo-image {
+    margin-right: 16px;
+    float: left;
+}
+
+.logo-text {
+    font-size: 22px;
+    display: block;
+    float: left;
+    line-height: 32px;
 }
 
 /* ORIGINAL */
@@ -44,14 +51,15 @@ body:not(:-moz-handler-blocked) fieldset {
 .header {
     background: #222;
     color: rgba(255, 255, 255, 0.51);
-    padding-bottom: 10px;
-    padding-top: 10px;
+    padding-bottom: 16px;
+    padding-top: 16px;
 }
 
 .header a,
 .header a:hover {
     color: #fff;
     text-decoration: none;
+    border: none;
 }
 .logo {
     font-size: 24px;
