--- a/templates/header.html
+++ b/templates/header.html
@@ -12,7 +12,7 @@
 {% if not new_user %}
 <div class="header clear-fix">
   <div class="centered-content">
-    <a lass="logo-image" href="/"><img src="/static/logo.png" height="32" width="32"></a>
+    <a class="logo-image" href="/"><img src="/static/logo.png" height="32" width="32"></a>
     <a class="logo-text" href="/">Weekly Snippets</a>
     <div class="navigation">
       <a class="navigation-link" href="/settings?u={{username}}">Settings</a> |
